--- a/src/app/productos/pages/agregar/agregar.component.html
+++ b/src/app/productos/pages/agregar/agregar.component.html
@@ -14,9 +14,7 @@
         </div>
 
         <div class="col-auto">
-            <span class="form-text" 
-                  error-msg
-                  color="red"
+            <span error-msg
                   mensaje="Debe de ingresar este campo"
                   *ngIf="tieneError('nombre')">
             </span>
