--- a/src/app/productos/pages/agregar/agregar.component.html
+++ b/src/app/productos/pages/agregar/agregar.component.html
@@ -1,5 +1,6 @@
-<h1 class="mt-5">Agregar Component</h1>
+<h1 class="mt-5">Agregar Component <small>{{ texto1 }}</small></h1>
 <hr>
+
 
 
 <form [formGroup]="miFormulario">
@@ -15,16 +16,26 @@
 
         <div class="col-auto">
             <span error-msg
-                  mensaje="Debe de ingresar este campo"
+                  [mensaje]="texto1"
+                  [color]="color"
                   *ngIf="tieneError('nombre')">
             </span>
         </div>
+
     </div>
 
     <div class="row mt-5">
         <div class="col">
-            <button class="btn btn-primary">
+            <button class="btn btn-primary"
+                    (click)="cambiarNombre()">
                 Guardar
+            </button>
+        </div>
+
+        <div class="col ml-5">
+            <button class="btn btn-primary"
+                    (click)="cambiarColor()">
+                Cambiar Color
             </button>
         </div>
     </div>
