directivas estructurales y fin de seccion

--- a/src/app/productos/pages/agregar/agregar.component.html
+++ b/src/app/productos/pages/agregar/agregar.component.html
@@ -18,7 +18,7 @@
             <span error-msg
                   [mensaje]="texto1"
                   [color]="color"
-                  *ngIf="tieneError('nombre')">
+                  [valido]="tieneError('nombre')">
             </span>
         </div>
 
@@ -44,3 +44,12 @@
 <h3 class="mt-5" color="#6957E6" error-msg>Formulario</h3>
 <pre>Value: {{ miFormulario.value | json}}</pre>
 <pre>Valid: {{ miFormulario.valid}}</pre>
+
+<div class="row mt-5"
+     *customIf="miFormulario.valid">
+    <div class="col">
+        <div class="alert alert-primary">
+            Todo OK!
+        </div>
+    </div>
+</div>
